<resources>
    <string name="app_name">PayEye Task</string>
    <string name="dashboard_guide_text">Click \"+\" to add a new employee</string>
    <string name="editor_name">Name</string>
    <string name="editor_surname">Surname</string>
    <string name="editor_age">Age</string>
    <string name="editor_street">Street</string>
    <string name="editor_building">Building</string>
    <string name="editor_apartament">Apartament</string>
    <string name="editor_city">City</string>
    <string name="editor_zip">Zip code</string>
    <string name="btn_add_address">Add address</string>
    <string name="btn_save">Save</string>
    <string name="editor_address">Address</string>
    <string name="editor_not_valid">Some fields are empty!</string>
    <string name="editor_not_ok">OK</string>
    <string name="editor_not_error">Error</string>
    <string name="btn_delete">Delete</string>
</resources>
